--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "filament/filament": "^4.0",
         "icetalker/filament-table-repeater": "^2.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
