--- a/DockerFile
+++ b/DockerFile
@@ -1,10 +1,10 @@
-# Use official PHP 8.2 with FPM
+# Use PHP 8.2 FPM
 FROM php:8.2-fpm
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    git unzip curl libzip-dev zip npm \
-    && docker-php-ext-install pdo_mysql zip
+    git unzip curl libzip-dev zip npm libpng-dev libjpeg-dev libfreetype6-dev libonig-dev \
+    && docker-php-ext-install pdo_mysql zip intl gd
 
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
@@ -12,7 +12,7 @@ COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 # Set working directory
 WORKDIR /var/www/html
 
-# Copy all files into container
+# Copy project files
 COPY . .
 
 # Install PHP dependencies
@@ -22,15 +22,15 @@ RUN composer install --no-dev --optimize-autoloader
 RUN npm install
 RUN npm run build
 
-# Clear and cache Laravel configuration
+# Clear and cache Laravel config
 RUN php artisan config:clear
 RUN php artisan route:clear
 RUN php artisan view:clear
 RUN php artisan cache:clear
 RUN php artisan config:cache
 
-# Expose port for Laravel server
+# Expose port
 EXPOSE 8000
 
-# Start Laravel
+# Start Laravel server
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
