--- a/DockerFile
+++ b/DockerFile
@@ -26,11 +26,11 @@ RUN npm install
 RUN npm run build
 
 # Clear and cache Laravel config
-RUN php artisan config:clear
-RUN php artisan route:clear
-RUN php artisan view:clear
-RUN php artisan cache:clear
-RUN php artisan config:cache
+# Skip database-dependent commands at build time
+RUN php artisan config:clear || true
+RUN php artisan route:clear || true
+RUN php artisan view:clear || true
+RUN php artisan cache:clear || true
 
 # Expose port
 EXPOSE 8000
