--- a/DockerFile
+++ b/DockerFile
@@ -4,10 +4,8 @@ FROM php:8.3-fpm
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     git unzip curl libzip-dev zip npm libpng-dev libjpeg-dev libfreetype6-dev libonig-dev \
-    libicu-dev pkg-config
-
-# Install PHP extensions
-RUN docker-php-ext-install pdo_mysql zip intl gd
+    libicu-dev pkg-config libpq-dev \
+    && docker-php-ext-install pdo_mysql pdo_pgsql zip intl gd
 
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
@@ -25,15 +23,14 @@ RUN composer install --no-dev --optimize-autoloader
 RUN npm install
 RUN npm run build
 
-# Clear and cache Laravel config
-# Skip database-dependent commands at build time
+# Clear and cache Laravel config (skip database-dependent commands at build time)
 RUN php artisan config:clear || true
 RUN php artisan route:clear || true
 RUN php artisan view:clear || true
 RUN php artisan cache:clear || true
 
-# Expose port
-EXPOSE 8000
+# Expose port 8080 for Sevalla
+EXPOSE 8080
 
-# Start Laravel
+# Start Laravel on 0.0.0.0:8080
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8080"]
