Dock on the Dock

--- a/DockerFile
+++ b/DockerFile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y \
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Copy project files
+# Copy application files
 COPY . .
 
 # Install PHP dependencies
@@ -23,26 +23,17 @@ RUN composer install --no-dev --optimize-autoloader
 # Install Node dependencies
 RUN npm ci
 
-# Build frontend assets (for production)
+# Build production frontend assets
 RUN npm run build
 
-# Clear Laravel caches
-RUN php artisan config:clear || true
-RUN php artisan route:clear || true
-RUN php artisan view:clear || true
-RUN php artisan cache:clear || true
+# Cache Laravel config, routes, views
+RUN php artisan config:cache
+RUN php artisan route:cache
+RUN php artisan view:cache
+RUN php artisan cache:clear
 
-# Expose ports for PHP and Vite (dev server)
-EXPOSE 8080 5173
+# Expose port for Laravel
+EXPOSE 8080
 
-# Entry point: can run in dev or prod
-# DEV: php artisan serve + vite dev
-# PROD: only php artisan serve (after npm run build)
-CMD ["sh", "-c", "\
-    if [ \"$APP_ENV\" = 'production' ]; then \
-        php artisan serve --host=0.0.0.0 --port=8080; \
-    else \
-        php artisan serve --host=0.0.0.0 --port=8080 & \
-        npm run dev -- --host; \
-    fi \
-"]
+# Entrypoint: Serve Laravel in production
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8080"]
