--- a/DockerFile
+++ b/DockerFile
@@ -27,10 +27,10 @@ RUN npm ci
 RUN npm run build
 
 # Cache Laravel config, routes, views
-RUN php artisan config:cache
-RUN php artisan route:cache
-RUN php artisan view:cache
-RUN php artisan cache:clear
+RUN php artisan config:cache || true
+RUN php artisan route:cache || true
+RUN php artisan view:cache || true
+RUN php artisan cache:clear || true
 
 # Expose port for Laravel
 EXPOSE 8080
