--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Water Scheme Management"
+APP_NAME="WSMIS"
 APP_ENV=local
 APP_KEY=base64:peiWdc7yYbKPb9E9bGVklNPdhjmR3s99gtHhgUZE69A=
 APP_DEBUG=true
